--- a/KnatteliganWPF/MatchProtocolPage.xaml
+++ b/KnatteliganWPF/MatchProtocolPage.xaml
@@ -1,14 +1,14 @@
 ﻿<Page x:Class="KnatteliganWPF.MatchProtocolPage"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:KnatteliganWPF"
-        xmlns:converters="clr-namespace:KnatteliganWPF.Converters"
-        mc:Ignorable="d"
-        Title="Match Protocol" Height="450" Width="625">
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:local="clr-namespace:KnatteliganWPF"
+      xmlns:converters="clr-namespace:KnatteliganWPF.Converters"
+      mc:Ignorable="d"
+      Title="Match Protocol" Height="450" Width="625">
     <Page.Resources>
-        <converters:MatchEventToStringConverter x:Key="MatchEventToStringConverter"/>
+        <converters:MatchEventToStringConverter x:Key="MatchEventToStringConverter" />
     </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -23,12 +23,14 @@
             <ColumnDefinition Width="220" />
         </Grid.ColumnDefinitions>
 
-        <TextBlock Name="HomeTeamName" Grid.Row="0" Grid.Column="0" VerticalAlignment="Bottom" HorizontalAlignment="Right" FontSize="18" Margin="5" />
-        <ListBox Name="HomeTeamMatchEvents" Grid.Row="1" Grid.Column="0" HorizontalContentAlignment="Right" FontSize="7"  Margin="5" 
+        <TextBlock Name="HomeTeamName" Grid.Row="0" Grid.Column="0" VerticalAlignment="Bottom"
+                   HorizontalAlignment="Right" FontSize="18" Margin="5" />
+        <ListBox Name="HomeTeamMatchEvents" Grid.Row="1" Grid.Column="0" HorizontalContentAlignment="Right"
+                 FontSize="7" Margin="5"
                  MouseDoubleClick="RemoveEvent_OnMouseDoubleClick">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="{x:Type ListBoxItem}">
-                    <Setter Property="Padding" Value="0,0,0,0"/>
+                    <Setter Property="Padding" Value="0,0,0,0" />
                 </Style>
             </ListBox.ItemContainerStyle>
             <ListBox.ItemTemplate>
@@ -39,37 +41,51 @@
         </ListBox>
 
         <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Vertical">
-            <Button Click="ButtonAddHomeTeamSquad_OnClick" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5" Content="Home Team Squad" />
-            <ListBox Name="HomeTeamList" MouseUp="List_OnMouseUp" HorizontalContentAlignment="Right" Margin="5" MaxHeight="210"  />
+            <Button Click="ButtonAddHomeTeamSquad_OnClick" HorizontalAlignment="Right" VerticalAlignment="Bottom"
+                    Margin="5" Content="Home Team Squad" />
+            <ListBox Name="HomeTeamList" MouseUp="List_OnMouseUp" HorizontalContentAlignment="Right" Margin="5"
+                     MaxHeight="210" />
         </StackPanel>
 
-        <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Center">
-            <TextBlock Name="LeagueNameHeader" HorizontalAlignment="Center" Margin="0" FontSize="8" Text=""></TextBlock>
+        <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="1" VerticalAlignment="Top"
+                    HorizontalAlignment="Center">
+            <TextBlock Name="LeagueNameHeader" HorizontalAlignment="Center" Margin="0" FontSize="8" Text="" />
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <TextBlock Name="HomeTeamGoals" FontWeight="Bold" FontSize="35" Text="0" Margin="2" />
-                <TextBlock Name="GoalSeparator" FontWeight="Bold" FontSize="35" Text="-" Margin="2"></TextBlock>
+                <TextBlock Name="GoalSeparator" FontWeight="Bold" FontSize="35" Text="-" Margin="2" />
                 <TextBlock Name="AwayTeamGoals" FontWeight="Bold" FontSize="35" Text="0" Margin="2" />
             </StackPanel>
         </StackPanel>
 
-        <DatePicker Name="DatePicker" Width="110" Height="20" Grid.Row="1" Grid.Column="1" />
+        <DatePicker Name="DatePicker" Width="110" Height="20" Grid.Row="1" Grid.Column="1">
+            <DatePicker.BlackoutDates>
+                <CalendarDateRange Start="1/1/0001" End="12/31/2015" />
+                <CalendarDateRange Start="12/31/2017" />
+            </DatePicker.BlackoutDates>
+        </DatePicker>
         <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="1">
-            <TextBlock Text="Add" HorizontalAlignment="Center" Margin="5,40,0,0" FontSize="10" ></TextBlock>
-            <Button Name="AddGoalButton" IsEnabled="False" Margin="5,0,0,0" HorizontalAlignment="Center" Content="Goal" Click="AddGoal_OnClick"/>
-            <Button Name="AddAssistButton" IsEnabled="False" Margin="5,0,0,0" HorizontalAlignment="Center" Content="Assist" Click="AddAssist_OnClick"/>
-            <Button Name="AddYellowCardButton" IsEnabled="False" Margin="5,0,0,0" HorizontalAlignment="Center" Content="Yellow Card" Click="AddYellowCard_OnClick"/>
-            <Button Name="AddRedCardButton" IsEnabled="False" Margin="5,0,0,0" HorizontalAlignment="Center" Content="Red Card" Click="AddRedCard_OnClick"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"  Margin="5,20,0,0">
-                <Button  Click="CancelProtocol_OnClick">Cancel</Button>
+            <TextBlock Text="Add" HorizontalAlignment="Center" Margin="5,40,0,0" FontSize="10" />
+            <Button Name="AddGoalButton" IsEnabled="False" Margin="5,0,0,0" HorizontalAlignment="Center" Content="Goal"
+                    Click="AddGoal_OnClick" />
+            <Button Name="AddAssistButton" IsEnabled="False" Margin="5,0,0,0" HorizontalAlignment="Center"
+                    Content="Assist" Click="AddAssist_OnClick" />
+            <Button Name="AddYellowCardButton" IsEnabled="False" Margin="5,0,0,0" HorizontalAlignment="Center"
+                    Content="Yellow Card" Click="AddYellowCard_OnClick" />
+            <Button Name="AddRedCardButton" IsEnabled="False" Margin="5,0,0,0" HorizontalAlignment="Center"
+                    Content="Red Card" Click="AddRedCard_OnClick" />
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5,20,0,0">
+                <Button Click="CancelProtocol_OnClick">Cancel</Button>
                 <Button Click="SaveProtocol_OnClick">Save</Button>
             </StackPanel>
         </StackPanel>
 
-        <TextBlock Name="AwayTeamName" Grid.Row="0" Grid.Column="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" FontSize="18" Margin="5" />
-        <ListBox Grid.Row="1" Grid.Column="2" Name="AwayTeamMatchEvents" FontSize="9" MouseDoubleClick="RemoveEvent_OnMouseDoubleClick">
+        <TextBlock Name="AwayTeamName" Grid.Row="0" Grid.Column="2" VerticalAlignment="Bottom"
+                   HorizontalAlignment="Left" FontSize="18" Margin="5" />
+        <ListBox Grid.Row="1" Grid.Column="2" Name="AwayTeamMatchEvents" FontSize="9"
+                 MouseDoubleClick="RemoveEvent_OnMouseDoubleClick">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="{x:Type ListBoxItem}">
-                    <Setter Property="Padding" Value="0,0,0,0"/>
+                    <Setter Property="Padding" Value="0,0,0,0" />
                 </Style>
             </ListBox.ItemContainerStyle>
             <ListBox.ItemTemplate>
@@ -82,21 +98,11 @@
         </ListBox>
 
         <StackPanel Grid.Row="2" Grid.Column="2" Orientation="Vertical">
-            <Button Click="ButtonAddAwayTeamSquad_OnClick" Content="Away Team Squad" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5" />
-            <ListBox Name="AwayTeamList" MouseUp="List_OnMouseUp" HorizontalContentAlignment="Left" Margin="5" MaxHeight="210"   />
+            <Button Click="ButtonAddAwayTeamSquad_OnClick" Content="Away Team Squad" HorizontalAlignment="Left"
+                    VerticalAlignment="Bottom" Margin="5" />
+            <ListBox Name="AwayTeamList" MouseUp="List_OnMouseUp" HorizontalContentAlignment="Left" Margin="5"
+                     MaxHeight="210" />
         </StackPanel>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     </Grid>
